--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.426.0",
     "next": "14.2.5",
+    "next-sitemap": "^4.2.3",
     "nextjs-toploader": "^1.6.12",
     "react": "^18",
     "react-dom": "^18",
